--- a/css/form.css
+++ b/css/form.css
@@ -116,6 +116,14 @@ div.form div.success label
 	color: inherit;
 }
 
+div.successFlash {
+    background: #E6EFC2;
+	border: 2px solid #C6D880;
+	padding: 7px 7px 12px 7px;
+	margin: 0 0 20px 0;
+	font-size: 0.9em;
+}
+
 div.form .errorSummary
 {
 	border: 2px solid #C00;
